# CrucibleAuth-Defense-Engine

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260217_0001_initial_schema.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  defense.py  models.py  monitoring.py  telemetry.py
app/core/: config.py  security.py
app/db/: init_db.py  models.py  session.py
app/ml/: __init__.py  base.py  pipeline.py
app/ml/anomaly/: isolation_forest_detector.py
app/ml/hybrid/: __init__.py  rnn_markov_embeddings.py
app/ml/network/: __init__.py  one_class_svm_detector.py
app/ml/rl/: dqn_response_agent.py
app/ml/timeseries/: lstm_gru_predictor.py
app/ml/transformers/: __init__.py  attack_mutation_transformer.py
app/observability/: __init__.py  metrics.py  tracing.py
app/schemas/: auth.py  defense.py  telemetry.py
app/services/: auth_service.py  background_jobs.py  defense_orchestrator.py  kafka_stream.py  mlflow_tracking.py  model_lifecycle_service.py  model_registry_service.py  monitoring_service.py  realtime_hub.py  state.py
app/web/: app.js  index.html  styles.css
infra/terraform/aws/: README.md  data.tf  (+12 more)
load/: locustfile.py
observability/prometheus/: prometheus.yml
scripts/: chaos_db_restart.ps1  migrate.py  run_load_test.ps1  seed_synthetic_data.py  train_bootstrap.py
tests/: conftest.py  test_auth_and_detection.py  test_health.py  test_models_retrain.py  test_monitoring.py
tests/chaos/: test_resilience.py
(+2 files in other folders)
